<resources>
    <string name="app_name">Inmobiliaria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>

    <!--extras-->
    <string name="dialog_si">SI</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_ok">OK</string>
    <string name="titulo_dialog_mensaje">Mensaje</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar">Editar</string>
    <string name="cambiar">Cambiar</string>
    <string name="detalle">Detalle</string>
    <string name="nombre_y_apellido">Nombre y Apellido</string>
    <string name="titulo_dialog_salir">Advertencia</string>
    <string name="pregunta_dialog_salir">¿Salir de la App?</string>
    <string name="peticion_exitosa">peticion no exitosa</string>
    <string name="err_peticion">Error al hacer la petición al servidor</string>

    <!--Login-->
    <string name="txt_login">Iniciar Sesión</string>
    <string name="et_hint_email">E-Mail</string>
    <string name="et_hint_password">Contraseña</string>
    <string name="bienvenido">¡Bienvenid@!</string>
    <string name="err_login_incorrecto">Credenciales inválidas</string>
    <string name="err_val_email_vacio">El email no puede estar vacío</string>
    <string name="err_val_email_muy_largo">El email no puede tener más de 100 caracteres</string>
    <string name="err_val_clave_vacia">La clave no puede estar vacía</string>
    <string name="err_val_clave_muy_corta">La clave debe tener al menos 8 caracteres</string>
    <string name="err_al_iniciar_sesion">Ocurrió un error al hacer intentar iniciar sesión</string>

    <!--Menu items-->
    <string name="menu_home">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_inmuebles">Inmuebles</string>
    <string name="menu_inquilinos">Inquilinos</string>
    <string name="menu_contratos">Contratos</string>
    <string name="menu_logout">Salir</string>
    <string name="menu_login">Iniciar Sesión</string>

    <!--Perfil-->
    <string name="tv_titulo_perfil">Mis Datos</string>
    <string name="tv_nombre">Nombre</string>
    <string name="tv_apellido">Apellido</string>
    <string name="tv_dni">DNI</string>
    <string name="tv_telefono">Teléfono</string>
    <string name="tv_email">E-mail</string>
    <string name="et_hint_nombre">nombre</string>
    <string name="et_hint_apellido">apellido</string>
    <string name="et_hint_dni">DNI</string>
    <string name="et_hint_telefono">teléfono</string>
    <string name="cambiar_contrasenia">Cambiar Contraseña</string>
    <string name="contrasenia_actual">Contraseña Actual</string>
    <string name="nueva_contrasenia">Nueva Contraseña</string>
    <string name="repetir_nueva_contrasenia">Repita la Nueva Contraseña</string>
    <string name="cambiar_la_contrasenia">Cambiar la Contraseña</string>
    <string name="perfil_actualizado">Perfil Actualizado</string>
    <string name="no_se_pudo_obtener_el_perfil">No se pudo obtener el perfil.</string>
    <string name="err_al_obtener_perfil">Error al obtener el perfil</string>
    <string name="err_al_actualizar_perfil">Error al actualizar el perfil</string>
    <string name="err_al_obtener_propietario">Error al obtener el propietario</string>
    <string name="err_val_nombre_vacio">El nombre no puede estar vacío</string>
    <string name="err_val_nombre_muy_largo">El nombre no puede tener más de 50 caracteres</string>
    <string name="err_val_apellido_vacio">El apellido no puede estar vacío</string>
    <string name="err_val_apellido_muy_largo">El apellido no puede tener más de 50 caracteres</string>
    <string name="err_val_dni_vacio">El DNI no puede estar vacío</string>
    <string name="err_val_dni_no_es_numero">El DNI debe ser un número</string>
    <string name="err_val_dni_formato_incorrecto">El DNI debe tener 7 u 8 caracteres numéricos</string>
    <string name="err_val_telefono_vacio">El teléfono no puede estar vacío</string>
    <string name="err_val_telefono_muy_largo">El teléfono no puede tener más de 25 caracteres</string>
    <string name="err_val_clave_actual_vacia">La clave actual no puede estar vacía</string>
    <string name="err_val_clave_nueva_vacia">La clave nueva no puede estar vacía</string>
    <string name="err_val_clave_no_coiciden">Las claves no coinciden</string>
    <string name="err_al_cambiar_contrasenia">Error al cambiar la contraseña</string>
    <string name="contrasenia_actualizada">Contraseña Actualizada</string>

    <!--inmuebles-->
    <string name="foto_del_inmueble">Foto del inmueble</string>
    <string name="agregar_inmueble">Agregar Inmueble</string>
    <string name="calle">Calle</string>
    <string name="nro">Nro</string>
    <string name="tipo_de_inmueble">Tipo de Inmueble</string>
    <string name="uso">Uso</string>
    <string name="cant_ambientes">Cant. ambientes</string>
    <string name="precio">Precio</string>
    <string name="direccion">Dirección</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="disponible">Disponible</string>
    <string name="detalle_del_inmueble">Detalle del Inmueble</string>
    <string name="cargar_foto">Cargar Foto</string>
    <string name="foto_del_inmueble_a_registrar">Foto del Inmueble a registrar</string>
    <string name="direccion_del_inmueble">Dirección del Inmueble</string>
    <string name="err_val_precio_vacio">El precio no puede estar vacío</string>
    <string name="err_val_precio_no_positivo">El precio debe ser mayor a 0</string>
    <string name="err_val_precio_no_es_numero">El precio debe ser un número válido</string>
    <string name="err_val_uso_vacio">El uso no puede estar vacío</string>
    <string name="err_val_uso_muy_largo">El uso no puede tener más de 50 caracteres</string>
    <string name="err_val_tipo_inmueble_vacio">El tipo de inmueble no puede estar vacío</string>
    <string name="err_val_tipo_inmueble_muy_largo">El tipo de inmueble no puede tener más de 50 caracteres</string>
    <string name="err_val_calle_vacia">La calle no puede estar vacía</string>
    <string name="err_val_calle_muy_larga">La calle no puede tener más de 100 caracteres</string>
    <string name="err_val_nro_calle_vacio">El número de calle no puede estar vacío</string>
    <string name="err_val_nro_calle_no_positivo">El número de calle debe ser mayor a 0</string>
    <string name="err_val_nro_calle_no_es_numero">El número de calle debe ser un número válido</string>
    <string name="err_val_latitud_vacia">La latitud no puede estar vacía</string>
    <string name="err_val_latitud_incorrecta">La latitud debe estar entre -90 y 90</string>
    <string name="err_val_latitud_no_es_numero">La latitud debe ser un número válido</string>
    <string name="err_val_longitud_vacia">La longitud no puede estar vacía</string>
    <string name="err_val_longitud_incorrecta">La longitud debe estar entre -180 y 180</string>
    <string name="err_val_longitud_no_es_numero">La longitud debe ser un número válido</string>
    <string name="err_val_cant_ambientes_vacia">La cantidad de ambientes no puede estar vacía</string>
    <string name="err_val_cant_ambientes_no_positiva">La cantidad de ambientes debe ser mayor a 0</string>
    <string name="err_val_cant_ambientes_no_es_numero">La cantidad de ambientes debe ser un número válido</string>
    <string name="lista_inmuebles_vacia">No tiene inmuebles registrados</string>
    <string name="err_cargar_inmuebles">Error al cargar los inmuebles</string>
    <string name="disponibilidad_actualizada">Disponibilidad Actualizada</string>
    <string name="err_al_actualizar_disponibilidad">Error al actualizar la disponibilidad</string>
    <string name="err_val_foto">Debe seleccionar una foto</string>
    <string name="err_foto">No ha seleccinado una foto</string>
    <string name="inmueble_creado">Inmueble creado correctamente</string>

</resources>