<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.inmobiliaria.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.inmobiliaria.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_nav_perfil_to_cambiarContraseniaFragment"
            app:destination="@id/cambiarContraseniaFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_contrato"
        android:name="com.example.inmobiliaria.ui.contrato.ContratoFragment"
        android:label="@string/menu_contratos"
        tools:layout="@layout/fragment_contrato" />
    <fragment
        android:id="@+id/nav_inmueble"
        android:name="com.example.inmobiliaria.ui.inmueble.InmuebleFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_inmueble" />
    <fragment
        android:id="@+id/nav_inquilino"
        android:name="com.example.inmobiliaria.ui.inquilino.InquilinoFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilino" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.inmobiliaria.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/cambiarContraseniaFragment"
        android:name="com.example.inmobiliaria.ui.perfil.CambiarContraseniaFragment"
        android:label="@string/cambiar_contrasenia"
        tools:layout="@layout/fragment_cambiar_contrasenia" >
        <action
            android:id="@+id/action_cambiarContraseniaFragment_to_nav_perfil"
            app:destination="@id/nav_perfil" />
    </fragment>
</navigation>